# stocks_assistant

./: .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: README.md
alembic/versions/: 065519ffc0b6_updating_table_users.py  41d9b637cce0_created_stock_prices_table.py  94410b910503_add_table_operations.py  9fac61820772_added_column_close_to_table_stock.py  a281c68b4ba3_init.py  d104cec1a8a5_add_table_users.py  f00b40915658_add_table_type_stock.py
app/: database.py  models.py  schemas.py
app/api/: __init__.py
app/api/api_v1/: bond_routes.py  routes.py
app/core/: config.py
app/db/: database.py  models.py  redis_db.py  schemas.py
app/repositories/: __init__.py  abstract_repository.py  sql_alchemy_repository.py
app/repositories/bonds/: bond_repository.py
app/repositories/stocks/: stock_repository.py
app/services/bonds/: bond_service.py  bond_service_impl.py
app/services/stocks/: stock_service.py  stock_service_impl.py
app/tests/: test_general.py
migration/: README.md
migration/versions/: 2023_12_16_1447-3cb3a97e5520_init_empty.py  2024_10_05_1507-f0e3549ebb15_add_table_bond.py
mirgaration/: README  create_alembic_version_history_table.sql  env.py
mirgaration/versions/: 2023_12_16_1447-3cb3a97e5520_create_database.py  2023_12_16_1447-3cb3a97e5520_init_empty.py  2023_12_16_1648-a8f3a4de6879_add_table_stockprice.py  2023_12_16_1648-a8f3a4de6879_change_fields_in_stock_prices.py  2023_12_16_1652-76e43b9c5c79_change_type_fields.py
