[tool.poetry]
name = "stocks-assistant"
version = "0.1.0"
description = ""
authors = ["Sergey Mironov <ka6ah505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.22"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
